# Xponents-Core

./: .gitignore  LICENSE  NOTICE  README.md  RELEASE.md  build.xml  pom.xml  setup.sh
doc/: README_geodesy.md  xcoord.md
doc/apidocs/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
doc/apidocs/org/opensextant/: ConfigException.html  package-summary.html  package-tree.html  package-use.html
doc/apidocs/org/opensextant/annotations/: Annotation.html  AnnotationHelper.html  DeepEyeData.html  DeepEyeException.html  DeepEyeStore.html  Record.html  package-summary.html  package-tree.html  package-use.html
doc/apidocs/org/opensextant/class-use/: ConfigException.html
doc/apidocs/org/opensextant/data/: Country.TZ.html  Country.html  (+13 more)
doc/python/: opensextant.extractors.html  opensextant.utility.html  opensextant.xlayer.html
script/: XponentsCore.groovy  demo.bat  demo.sh  dist.sh
src/main/python/: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py
src/main/python/opensextant/: FlexPat.py  __init__.py  advas_phonetics.py  utility.py  xlayer.py
src/main/python/opensextant/extractors/: xcoord.py  xtemporal.py
src/main/python/opensextant/resources/: datetime_patterns_py.cfg  geocoord_patterns_py.cfg
src/main/python/tests/: test_language.py  test_xcoord.py  test_xtemporal.py
src/test/java/: TestGISOutputters.java
(+701 files in other folders)
